up database
