# app/models/vehicle.rb
@@ -2,7 +2,7 @@ class Vehicle < ApplicationRecord
   has_many :entry
   belongs_to :parking
 
-  validates :plate, :color, :brand, presence: true
+  validates :plate, presence: true
 
 
 
