# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2019_03_20_221041) do
+ActiveRecord::Schema.define(version: 2019_04_03_135245) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -46,8 +46,6 @@ ActiveRecord::Schema.define(version: 2019_03_20_221041) do
 
   create_table "vehicles", force: :cascade do |t|
     t.string "plate"
-    t.string "color"
-    t.string "brand"
     t.integer "parking_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
